--- a/src/main/webapp/frontend/package.json
+++ b/src/main/webapp/frontend/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-router": "^3.2.0",
     "vue-session": "^1.0.0",
     "vuex": "^3.4.0"
