--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=80
-
+server.address=192.168.35.115
 # jsp - ViewResolver setting
 spring.mvc.view.suffix=/WEB-INF/views/
 spring.mvc.view.prefix=.jsp
@@ -27,3 +27,8 @@ logging.level.org.hibernate=info
 logging.level.root=info
 #logging.file.path= src/main/resources/logs
 
+server.ssl.key-store=tests
+server.ssl.key-store-password=123456
+server.ssl.key-alias=test
+server.ssl.trust-store=tests
+server.ssl.trust-store-password=123456
